v8/tests/messages/regression-668360.out
regression-668360.js:6: Uncaught TypeError: Object a xx has no method 'doesNotExist'
string.doesNotExist()
       ^
